More skeleton, logic

--- a/index.html
+++ b/index.html
@@ -18,14 +18,39 @@
         <h1><strong>Book</strong> Library</h1>
     </header>
     <main>
+        <hr>
         <div class="options">
             <button id="addBookButton">Add Book</button>
             <button id="refreshBooksButton">Refresh</button>
         </div>
-        <div class="cardsContainer">
-
+        <div class="cardsContainer" id="booksContainer">
+            <div class="book">
+                <div class="bookInfo">
+                    <h3><strong>The Hobbit</strong></h3>
+                    <p><strong>By:</strong> tolkien</p>
+                    <p><strong>Pages:</strong> 50</p>
+                </div>
+                <button class="readButton notRead">Not read yet</button>
+            </div>
+            <div class="book">
+                <div class="bookInfo">
+                    <h3><strong>The Hobbit</strong></h3>
+                    <p><strong>By:</strong> tolkien</p>
+                    <p><strong>Pages:</strong> 50</p>
+                </div>
+                <button class="readButton read">Read</button>
+            </div>
         </div>
     </main>
+    <footer>
+        <hr>
+        <div class="contactItem">
+            <a href="https://github.com/arvidjj" target="_blank">
+                <img src="img/github.png" alt="Github">
+                <h2 class="contactH">Github: arvidjj</h2>
+            </a>
+        </div>
+    </footer>
 </body>
 
 </html>
