--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script src="book.js" defer></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
 </head>
 
 <body>
@@ -20,10 +21,12 @@
     <main>
         <hr>
         <div class="options">
-            <button id="addBookButton">Add Book</button>
+            <button id="addBookButton"><span class="material-symbols-outlined">
+                add_circle
+                </span> <p>Add Book</p></button>
             <button id="refreshBooksButton">Refresh</button>
         </div>
-        <div class="cardsContainer" id="booksContainer">
+        <div class="cardsContainer" id="booksContainer" style="display: none">
             <div class="book">
                 <div class="bookInfo">
                     <h3><strong>The Hobbit</strong></h3>
@@ -40,6 +43,24 @@
                 </div>
                 <button class="readButton read">Read</button>
             </div>
+        </div>
+        <div class="addBookContainer" id="addBookScreen">
+            <h3>Add <strong>Book</strong></h3>
+            <form action="">
+                <label for="title">Title</label>
+                <input type="text" name="title" id="title">
+
+                <label for="author">Author</label>
+                <input type="text" name="author" id="author">
+
+                <label for="pages">Pages</label>
+                <input type="number" name="pages" id="pages">
+
+                <div class="addBookButtons">
+                    <button type="submit" id="addBook">Add</button>
+                    <button id="cancelAddBook">Cancel</button>
+                </div>
+            </form>
         </div>
     </main>
     <footer>
