--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </span> <p>Add Book</p></button>
             <button id="refreshBooksButton">Refresh</button>
         </div>
-        <div class="cardsContainer" id="booksContainer" style="display: none">
+        <div class="cardsContainer" id="booksContainer">
             <div class="book">
                 <div class="bookInfo">
                     <h3><strong>The Hobbit</strong></h3>
