--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main>
         
         <div class="options">
-            <button id="addBookButton"><span class="material-symbols-outlined">
+            <button id="addBookButton"><span class="material-symbols-outlined filledIcon ">
                 add_circle
                 </span> <p>Add Book</p></button>
             <button id="refreshBooksButton">Refresh</button>
