--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <script src="book.js" defer></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
+    <script type="module" src="src/app.js"></script>
 </head>
 
 <body>
+    
     <header>
         <h1><strong>Book</strong> Library</h1>
         <hr>
